--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
                     <h1 class="main-section__introduction to-uppercase">I am Samigjonov</h1>
                     <h3 class="main-section__position to-uppercase">Senior (katta) dasturchi & Vlogger</h3>
                     <div class="main-section__social-networks">
-                        <a href="https://t.me/ulugbeksamigjonov">
+                        <a href="https://t.me/unrepeatable_13">
                             <i class="fab fa-telegram"></i>
                         </a>
-                        <a href="https://www.youtube.com/channel/UC1wuFkzE7FZ7CsbdatrdGBw">
+                        <a href="#">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://instagram.com/ulugbeksamigjonov">
+                        <a href="https://instagram.com/sultan____.01">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </div>
