--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <section id="main-section" class="main-section">
                 <div class="main-section__info">
                     <h4 class="main-section__welcome to-uppercase">Salom hammaga!</h4>
-                    <h1 class="main-section__introduction to-uppercase">I am Samigjonov</h1>
-                    <h3 class="main-section__position to-uppercase">Senior (katta) dasturchi & Vlogger</h3>
+                    <h1 class="main-section__introduction to-uppercase">I am Ibragimov</h1>
+                    <h3 class="main-section__position to-uppercase">Bolajak dasturchi</h3>
                     <div class="main-section__social-networks">
                         <a href="https://t.me/unrepeatable_13">
                             <i class="fab fa-telegram"></i>
@@ -115,10 +115,10 @@
                         <span class="blur-line"></span>
                     </h5>
                     <h3 class="section-title">
-                        Senior (katta) dasturchi
+                        Bolajak dasturchi
                     </h3>
                     <p class="about-me__description">
-                        Mening ismim Ulugbek va men 23 yoshdaman. 5 yildan ortiq vaqt mobaynida dasturchi bo'lib ishlab kelaman va hozirda Amerika kompaniyasida yuqori (senior) dasturchi bo'lib faoliyat yuritaman. Toshkent shahridagi Inha Universiteti bitiruvchisi hisoblanaman.
+                        Mening ismim Sulton va men 17 yoshdaman. xozirgi paytda HTML CSS JS dasturlash tillarini organib boryapman va Telefon,Kompyuter programmisti deb hisoblanaman. Kelajagda FLUTTER dasturlashni ham organmoqchiman.
                     </p>
                     <button type="button" class="button to-uppercase about-me__action">
                         CV ko'chirib olish
@@ -196,10 +196,10 @@
                         </div>
                         <div class="client-item__info">
                             <h3 class="client-item__name">
-                                Alisher Sultonov
+                                Sulton Ibragimov
                             </h3>
                             <p class="client-item__position">
-                                Senior (katta) dasturchi
+                                Bolajak dasturchi
                             </p>
                             <p class="client-item__review">
                                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
